# intel-ipmi-oem

./: .clang-format  README.md  generate-allowlist.py  ipmi-allowlist.conf  ipmi-blocklist.conf  ipmi-systemlock.conf  meson.build  meson.options
include/: biosconfigcommands.hpp  blocklist.hpp  bridgingcommands.hpp  ipmi_to_redfish_hooks.hpp  manufacturingcommands.hpp  oemcommands.hpp  sdrutils.hpp  sensorcommands.hpp  smbiosmdrv2.hpp  smbiosmdrv2handler.hpp  storagecommands.hpp  systemlock.hpp  types.hpp
src/: allowlist-filter.cpp  appcommands.cpp  biosconfigcommands.cpp  bridgingcommands.cpp  chassiscommands.cpp  firmware-update.cpp  ipmi_to_redfish_hooks.cpp  manufacturingcommands.cpp  multinodecommands.cpp  oemcommands.cpp  sensorcommands.cpp  smbiosmdrv2handler.cpp  storagecommands.cpp
tests/: test_sensorcommands.cpp
